feat(javafx): adiciona tratamento global de exceções
Cria GlobalExceptionHandler para capturar RuntimeExceptions não tratadas,
registrar o erro no console e exibir um alerta amigável ao usuário.

O alerta é executado com segurança na thread JavaFX via Platform.runLater
e inclui painel expansível com stack trace técnico para debug.